--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@kokiito0926/zxargs",
 	"version": "0.0.1",
 	"private": false,
-	"description": "ゼックスアーグス（zxargs）を用いると、標準入力から受け取ったデータから、別のコマンドを実行することができます。",
+	"description": "標準入力から受け取ったデータから、別のコマンドを実行することができるコマンドラインのツールです。",
 	"keywords": [
 		"cli",
 		"bash",
